--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "push": "yarn build && git add . && git commit -m 'Build' && git push"
   },
   "dependencies": {
     "@ant-design/compatible": "^5.1.2",
