--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "push": "yarn build && git add . && git commit -m 'Build' && git push"
+    "push": "yarn build && git add . && git commit -m 'Build' && git push",
+    "bump":"git pull && npm run build && pm2 reload nextjs-app"
   },
   "dependencies": {
     "@ant-design/compatible": "^5.1.2",
