--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "push": "yarn build && git add . && git commit -m 'Build' && git push",
-    "bump":"git pull && npm run build && pm2 reload nextjs-app"
+    "bump": "git pull && npm install && npm run build && pm2 reload nextjs-app --update-env"
   },
   "dependencies": {
     "@ant-design/compatible": "^5.1.2",
