--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-slick": "^0.30.0",
     "slick-carousel": "^1.8.1"
