--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^2.1.1",
     "antd": "^5.13.2",
     "daisyui": "^4.6.0",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
